--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <p>skriv scripts og link dem til din HTML...</p>
 
       <p>Du skal skrive følgende kode i et script tag:</p>
+      <pre><code>alert("hej fra et script tag");</code></pre>
       <script>
         alert("hej fra et script tag");
       </script>
